--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@types/react-native-vector-icons": "^4.6.1",
+    "@types/react-navigation": "^1.5.11",
     "expo": "^27.0.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
     "react": "16.3.1",
-    "react-native": "~0.55.2"
+    "react-native": "~0.55.2",
+    "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^2.0.2"
   }
 }
