--- a/package.json
+++ b/package.json
@@ -3,25 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.14.0",
-    "jest-expo": "~27.0.0",
+    "@types/jest": "^22.2.3",
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "jest": "^23.0.0",
+    "jest-react-native": "^18.0.0",
     "react-test-renderer": "16.3.1"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "test": "jest"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "react-native"
   },
   "dependencies": {
     "@types/react-native-vector-icons": "^4.6.1",
     "@types/react-navigation": "^1.5.11",
-    "expo": "^27.0.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
     "react": "16.3.1",
